--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
         Ullamcorper felis penatibus interdum ridiculus netus parturient nulla aliquam lacinia vehicula pulvinar varius, fusce cum senectus eu maecenas mauris lacus donec mi est eleifend. Facilisi netus aptent semper bibendum eu hac magnis condimentum, nulla vestibulum dis cras himenaeos habitasse. Varius dui congue praesent leo inceptos libero cras, egestas nisi cubilia tincidunt nunc arcu ullamcorper ad, quis bibendum tortor risus sociis per. Egestas nisl odio iaculis cubilia tempus penatibus ullamcorper proin porta tortor, lacus vivamus nunc nostra non elementum mus venenatis auctor, morbi ultricies habitasse vitae sagittis sodales aliquam vulputate orci. Vehicula vestibulum nascetur dictum tortor fames pharetra bibendum sociosqu urna volutpat nunc, aptent ad blandit mauris a gravida vulputate justo semper quis erat, mus tristique ornare potenti porttitor risus integer enim fermentum arcu. Accumsan cum ante per felis habitant commodo viverra maecenas quis, ultrices eget tortor imperdiet nascetur primis litora massa, sed vitae faucibus bibendum ridiculus at interdum ut.
     </p>
     
-    <section id="copyright">
-        <p>Made by <a href="https://github.com/theLadEli/">theLadEli</a></p>
-    </section>
+    <p class="copyright">Made by <a href="https://github.com/theLadEli/">theLadEli</a></p>
+
 </body>
 
 <script type="text/javascript">
